--- a/package.json
+++ b/package.json
@@ -1,18 +1,37 @@
 {
-  "name"           : "angular2-trim-directive",
-  "version"        : "1.0.1",
-  "repository"     : "git@github.com:anein/angular2-trim-directive.git",
-  "author"         : "Alexander Ein (@alexanderein)",
-  "license"        : "MIT",
-  "scripts"        : {
-    "eg:build": "ng build",
-    "eg:serve": "ng serve"
+  "name"            : "ng2-trim-directive",
+  "version"         : "1.0.1",
+  "author"          : "Alexander Ein (@alexanderein)",
+  "license"         : "MIT",
+  "repository"      : {
+    "type": "git",
+    "url" : "git+ssh://github.com/anein/angular2-trim-directive.git"
   },
-  "dependencies"   : {
+  "bugs"            : {
+    "url": "https://github.com/anein/angular2-trim-directive/issues"
+  },
+  "keywords"        : [
+    "angular",
+    "ng2",
+    "directive",
+    "typescript",
+    "trim",
+    "javascript"
+  ],
+  "main"            : "dist/input-trim.directive.js",
+  "types"           : "dist/input-trim.directive.d.ts",
+  "scripts"         : {
+    "eg:build": "ng build --app 0",
+    "eg:serve": "ng serve --app 0",
+    "build"   : "tsc --project ./tsconfig.json"
+  },
+  "peerDependencies": {
     "@angular/core" : "^4.3.4",
     "@angular/forms": "^4.3.4"
   },
-  "devDependencies": {
+  "devDependencies" : {
+    "@angular/core"                    : "^4.3.4",
+    "@angular/forms"                   : "^4.3.4",
     "@angular/cli"                     : "^1.3.0",
     "@angular/common"                  : "^4.3.4",
     "@angular/compiler"                : "^4.3.4",
