--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,24 @@
 {
   "compilerOptions": {
-    "module"                : "commonjs",
-    "target"                : "es5",
-    "noImplicitAny"         : false,
-    "sourceMap"             : false,
+    "declaration"           : true,
     "experimentalDecorators": true,
-    "sourceRoot"            : "example/src",
+    "module"                : "commonjs",
+    "noImplicitAny"         : false,
+    "outDir"                : "dist",
+    "sourceMap"             : false,
+    "target"                : "es5",
+    "pretty"                : true,
+    "removeComments"        : true,
     "lib"                   : [
       "es2017",
       "dom"
-    ],
-    "exclude"          : [
-      "node_modules"
-    ],
-    "formatCodeOptions"     : {
-      "indentSize"                                                : 2,
-      "tabSize"                                                   : 2,
-      "insertSpaceAfterCommaDelimiter"                            : true,
-      "insertSpaceAfterSemicolonInForStatements"                  : true,
-      "insertSpaceBeforeAndAfterBinaryOperators"                  : true,
-      "insertSpaceAfterKeywordsInControlFlowStatements"           : true,
-      "insertSpaceAfterFunctionKeywordForAnonymousFunctions"      : true,
-      "insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true
-    }
-  }
+    ]
+  },
+  "include"        : [
+    "src/**/*"
+  ],
+  "exclude"        : [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
