--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"           : "ng2-trim-directive",
-  "version"        : "1.0.4",
+  "version"        : "1.0.5",
   "author"         : "Alexander Ein (@alexanderein)",
   "license"        : "MIT",
   "repository"     : {
@@ -27,19 +27,29 @@
   "scripts"        : {
     "eg:build": "ng build --app 0",
     "eg:serve": "ng serve --app 0",
-    "build"   : "tsc --project ./tsconfig.json"
+    "build"   : "tsc --project ./tsconfig.json",
+    "test"    : "ng test"
   },
   "devDependencies": {
-    "@angular/core"                    : "^4.3.4",
-    "@angular/forms"                   : "^4.3.4",
     "@angular/cli"                     : "^1.3.0",
     "@angular/common"                  : "^4.3.4",
     "@angular/compiler"                : "^4.3.4",
     "@angular/compiler-cli"            : "^4.3.4",
+    "@angular/core"                    : "^4.3.4",
+    "@angular/forms"                   : "^4.3.4",
     "@angular/platform-browser"        : "^4.3.4",
     "@angular/platform-browser-dynamic": "^4.3.4",
     "@ngtools/webpack"                 : "^1.6.0",
+    "@types/jasmine"                   : "^2.5.54",
     "codelyzer"                        : "^3.1.2",
+    "jasmine-core"                     : "^2.8.0",
+    "karma"                            : "^1.7.1",
+    "karma-chrome-launcher"            : "^2.2.0",
+    "karma-cli"                        : "^1.0.1",
+    "karma-coverage-istanbul-reporter" : "^1.3.0",
+    "karma-jasmine"                    : "^1.1.0",
+    "karma-jasmine-html-reporter"      : "^0.2.2",
+    "karma-phantomjs-launcher"         : "^1.0.4",
     "rxjs"                             : "^5.4.3",
     "tslint"                           : "^5.6.0",
     "typescript"                       : "^2.4.2",
