--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,8 @@
   "exclude"        : [
     "node_modules",
     "**/*.spec.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "strictMetadataEmit": true
+  }
 }
