--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "LICENSE"
   ],
   "scripts"        : {
-    "eg:build": "ng build --app 0",
-    "eg:serve": "ng serve --app 0",
-    "build"   : "ngc --project ./tsconfig.json",
-    "test"    : "ng test"
+    "eg:build"  : "ng build --app 0",
+    "eg:serve"  : "ng serve --app 0",
+    "build"     : "ngc --project ./tsconfig.json",
+    "test"      : "ng test",
+    "prepublish": "npm run build"
   },
   "devDependencies": {
     "@angular/cli"                     : "^1.3.0",
