--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"           : "ng2-trim-directive",
-  "version"        : "2.1.0",
+  "version"        : "2.1.1",
   "author"         : "Alexander Ein (@alexanderein)",
   "license"        : "MIT",
   "repository"     : {
@@ -32,29 +32,32 @@
     "prepublish": "npm run build"
   },
   "devDependencies": {
-    "@angular/cli"                     : "^1.3.0",
-    "@angular/common"                  : "^4.3.4",
-    "@angular/compiler"                : "^4.3.4",
-    "@angular/compiler-cli"            : "^4.3.4",
-    "@angular/core"                    : "^4.3.4",
-    "@angular/forms"                   : "^4.3.4",
-    "@angular/platform-browser"        : "^4.3.4",
-    "@angular/platform-browser-dynamic": "^4.3.4",
-    "@ngtools/webpack"                 : "^1.6.0",
-    "@types/jasmine"                   : "^2.5.54",
-    "codelyzer"                        : "^3.1.2",
+    "@angular/cli"                     : "^1.6.3",
+    "@angular/common"                  : "^5.1.2",
+    "@angular/compiler"                : "^5.1.2",
+    "@angular/compiler-cli"            : "^5.1.2",
+    "@angular/core"                    : "^5.1.2",
+    "@angular/forms"                   : "^5.1.2",
+    "@angular/platform-browser"        : "^5.1.2",
+    "@angular/platform-browser-dynamic": "^5.1.2",
+    "@ngtools/webpack"                 : "^1.9.3",
+    "@types/jasmine"                   : "^2.8.3",
+    "@types/node"                      : "^8.5.7",
+    "codelyzer"                        : "^4.0.2",
     "jasmine-core"                     : "^2.8.0",
-    "karma"                            : "^1.7.1",
+    "karma"                            : "^2.0.0",
     "karma-chrome-launcher"            : "^2.2.0",
     "karma-cli"                        : "^1.0.1",
-    "karma-coverage-istanbul-reporter" : "^1.3.0",
-    "karma-jasmine"                    : "^1.1.0",
+    "karma-coverage-istanbul-reporter" : "^1.3.3",
+    "karma-jasmine"                    : "^1.1.1",
     "karma-jasmine-html-reporter"      : "^0.2.2",
     "karma-phantomjs-launcher"         : "^1.0.4",
-    "rxjs"                             : "^5.4.3",
-    "tslint"                           : "^5.6.0",
-    "typescript"                       : "^2.4.2",
-    "webpack"                          : "^3.5.4",
-    "zone.js"                          : "^0.8.16"
+    "rxjs"                             : "^5.5.6",
+    "tslint"                           : "^5.8.0",
+    "typescript"                       : "^2.6.2",
+    "webpack"                          : "^3.10.0",
+    "zone.js"                          : "^0.8.19"
+  },
+  "dependencies"   : {
   }
 }
