--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "angular2-trim-directive",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:anein/angular2-trim-directive.git",
-  "author": "Alexander Ein <@alexanderein>",
-  "license": "MIT",
-  "scripts": {
+  "name"           : "angular2-trim-example",
+  "version"        : "1.0.0",
+  "repository"     : "git@github.com:anein/angular2-trim-directive.git",
+  "author"         : "Alexander Ein <@alexanderein>",
+  "license"        : "MIT",
+  "scripts"        : {
     "build": "ng build --app 0",
-    "dev": "ng serve --app 0"
+    "dev"  : "ng serve --app 0"
   },
-  "dependencies": {
-    "@ngtools/webpack": "^1.9.3",
-    "@types/node": "^9.3.0",
+  "dependencies"   : {
+    "@ngtools/webpack"  : "^1.9.3",
+    "@types/node"       : "^9.3.0",
     "ng2-trim-directive": "^2.1.2",
-    "rxjs": "^5.5.6",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0",
-    "zone.js": "^0.8.19"
+    "rxjs"              : "^5.5.6",
+    "tslint"            : "^5.8.0",
+    "typescript"        : "^2.6.2",
+    "webpack"           : "^3.10.0",
+    "zone.js"           : "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.3",
-    "@angular/common": "^5.1.3",
-    "@angular/compiler": "^5.1.3",
-    "@angular/compiler-cli": "^5.1.3",
-    "@angular/core": "^5.1.3",
-    "@angular/forms": "^5.1.3",
-    "@angular/platform-browser": "^5.1.3",
+    "@angular/cli"                     : "^1.6.3",
+    "@angular/common"                  : "^5.1.3",
+    "@angular/compiler"                : "^5.1.3",
+    "@angular/compiler-cli"            : "^5.1.3",
+    "@angular/core"                    : "^5.1.3",
+    "@angular/forms"                   : "^5.1.3",
+    "@angular/platform-browser"        : "^5.1.3",
     "@angular/platform-browser-dynamic": "^5.1.3",
-    "codelyzer": "^4.0.2"
+    "codelyzer"                        : "^4.0.2"
   }
 }
