--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"           : "ng2-trim-directive",
-  "version"        : "2.1.4",
+  "version"        : "2.1.5",
   "author"         : "Alexander Ein (@alexanderein)",
   "license"        : "MIT",
   "repository"     : {
@@ -45,7 +45,7 @@
     "@types/node"                      : "^8.5.7",
     "codelyzer"                        : "^4.0.2",
     "jasmine-core"                     : "^2.8.0",
-    "karma"                            : "^2.0.0",
+    "karma"                            : "^2.0.3",
     "karma-chrome-launcher"            : "^2.2.0",
     "karma-cli"                        : "^1.0.1",
     "karma-coverage-istanbul-reporter" : "^1.3.3",
@@ -58,6 +58,5 @@
     "webpack"                          : "^3.10.0",
     "zone.js"                          : "^0.8.19"
   },
-  "dependencies"   : {
-  }
+  "dependencies"   : {}
 }
