--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "karma-jasmine"                    : "^1.1.1",
     "karma-jasmine-html-reporter"      : "^0.2.2",
     "prettier"                         : "^1.15.2",
+    "puppeteer"                        : "^1.10.0",
     "rxjs"                             : "^5.5.6",
     "travis"                           : "^0.1.1",
     "travis-cli"                       : "^1.0.9",
