--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,25 @@
 {
-  "compilerOptions"       : {
-    "declaration"           : true,
+  "compilerOptions": {
+    "declaration": true,
     "experimentalDecorators": true,
-    "module"                : "commonjs",
-    "noImplicitAny"         : false,
-    "rootDir"               : "src",
-    "outDir"                : "dist",
-    "sourceMap"             : false,
-    "target"                : "es5",
-    "pretty"                : true,
-    "removeComments"        : true,
-    "lib"                   : [
+    "module": "commonjs",
+    "noImplicitAny": false,
+    "rootDir": "src",
+    "outDir": "dist",
+    "sourceMap": false,
+    "target": "es5",
+    "pretty": true,
+    "removeComments": true,
+    "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "baseUrl": "./"
   },
-  "include"               : [
+  "include": [
     "src/**/*"
   ],
-  "exclude"               : [
+  "exclude": [
     "node_modules",
     "**/*.spec.ts"
   ],
