chore: add pre-push hook

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "husky"          : {
     "hooks": {
-      "pre-commit": "yarn run lint && yarn run test && yarn run build"
+      "pre-commit": "yarn run lint && yarn run test",
+      "pre-push"  : "yarn run lint && yarn run test && yarn run build"
     }
   },
   "devDependencies": {
