chore(travis): set version of typescript to avoid cli error

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "travis-cli"                       : "^1.0.9",
     "tslint"                           : "^5.11.0",
     "tslint-config-prettier"           : "^1.16.0",
-    "typescript"                       : "^3.1.6",
+    "typescript"                       : "3.1.6",
     "webpack"                          : "^4.26.0",
     "zone.js"                          : "^0.8.26"
   },
