--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
     }
   },
   "devDependencies": {
-    "@angular-devkit/build-angular"    : "^0.10.6",
-    "@angular/cli"                     : "^7.0.6",
-    "@angular/common"                  : "^7.0.4",
-    "@angular/compiler"                : "^7.0.4",
-    "@angular/compiler-cli"            : "^7.0.4",
-    "@angular/core"                    : "^7.0.4",
-    "@angular/forms"                   : "^7.0.4",
-    "@angular/platform-browser"        : "^7.0.4",
-    "@angular/platform-browser-dynamic": "^7.0.4",
-    "@ngtools/webpack"                 : "^7.0.6",
+    "@angular-devkit/build-angular"    : "~0.10.6",
+    "@angular/cli"                     : "~7.0.6",
+    "@angular/common"                  : "~7.0.4",
+    "@angular/compiler"                : "~7.0.4",
+    "@angular/compiler-cli"            : "~7.0.4",
+    "@angular/core"                    : "~7.0.4",
+    "@angular/forms"                   : "~7.0.4",
+    "@angular/platform-browser"        : "~7.0.4",
+    "@angular/platform-browser-dynamic": "~7.0.4",
+    "@ngtools/webpack"                 : "~7.0.6",
     "@types/jasmine"                   : "^2.8.3",
     "@types/node"                      : "^10.12.9",
     "codelyzer"                        : "^4.5.0",
@@ -71,7 +71,7 @@
     "travis-cli"                       : "^1.0.9",
     "tslint"                           : "^5.11.0",
     "tslint-config-prettier"           : "^1.16.0",
-    "typescript"                       : "3.1.6",
+    "typescript"                       : "~3.1.6",
     "webpack"                          : "^4.26.0",
     "zone.js"                          : "^0.8.26"
   },
